[package]
name = "jpeg_diff_rs"
version = "0.5.0"
authors = [""]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
benchmarking = []
parallel = []
simd512 = []
simd128 = []
bitDiv = []

[dependencies]
clap = "2.33.3"
image = "0.23.13"
rayon = "1.5.0"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }


[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
# panic = 'abort'     # Abort on panic
